Fixed Statistics Page Overflowing Issue

--- a/src/Components/Styles/Loaderstyles.module.scss
+++ b/src/Components/Styles/Loaderstyles.module.scss
@@ -6,6 +6,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 	--bgcl: #c1c1c1;
 	--fgcl: #ffffff;
 
