--- a/src/Styles/PublicDownloader.module.scss
+++ b/src/Styles/PublicDownloader.module.scss
@@ -434,7 +434,7 @@ html.homePage {
 						background-color: transparent;
 						padding: 4rem;
 						border: 1px solid #6762ffbf;
-						box-shadow: 0rem 0rem 5rem 0.25rem #6762ff5a;
+						box-shadow: 0rem 0rem 1rem 1rem #6762ff17;
 					}
 				}
 
@@ -475,8 +475,7 @@ html.homePage {
 							height: 100%;
 							object-fit: contain;
 							border: 1px solid #6762ffbf;
-							box-shadow: 0rem 0rem 5rem 0.25rem
-								#6762ff5a;
+							box-shadow: 0rem 0rem 1rem 1rem #6762ff17;
 						}
 					}
 
