--- a/src/Styles/Register.module.scss
+++ b/src/Styles/Register.module.scss
@@ -113,6 +113,8 @@ html.homePage {
 				display: none;
 			}
 
+			scrollbar-width: none;
+
 			h2 {
 				font-size: 1.75rem;
 				font-weight: 600;
